@@ -223,7 +223,8 @@ FileNamesWidgetMenu$"Add/modify Attributes of Selected File..."$handler <- funct
   if (is_projOpen(env=.rqda,conName="qdacon")) {
     Selected <- svalue(.rqda$.fnames_rqda)
     if (length(Selected !=0 )){
-    fileId <- dbGetQuery(.rqda$qdacon,sprintf("select id from source where status=1 and name='%s'",Selected))[,1]
+    fileId <- RQDAQuery(sprintf("select id from source where status=1 and name='%s'",
+                                enc(Selected)))[,1]
     FileAttrFun(fileId=fileId,title=Selected)
   }
 }}
@@ -231,7 +232,8 @@ FileNamesWidgetMenu$"Add/modify Attributes of The Open File..."$handler <- funct
   if (is_projOpen(env=.rqda,conName="qdacon")) {
     Selected <- tryCatch(svalue(RQDA:::.rqda$.root_edit),error=function(e){NULL})
     if (!is.null(Selected)){
-    fileId <- dbGetQuery(.rqda$qdacon,sprintf("select id from source where status=1 and name='%s'",Selected))[,1]
+      fileId <- RQDAQuery(sprintf("select id from source where status=1 and name='%s'",
+                                  enc(Selected)))[,1]
     FileAttrFun(fileId=fileId,title=Selected)
   }
 }}
