@@ -195,15 +195,15 @@ is_projOpen <- function(env=.rqda,conName="qdacon",message=TRUE){
 }
 
 backup_proj <- function(con){
-## con=.rqda$qdacon
-dbname <- dbGetInfo(con)$dbname
-backupname <- sprintf("%s_%s",dbname,format(Sys.time(), "%H%M%S%d%m%Y"))
-success <- file.copy(from=dbname, to=backupname , overwrite = FALSE)
-if (success) {
-gmessage("Succeeded!",con=TRUE,icon="info")
-} else{
-gmessage("Fail to back up the project.",con=TRUE,icon="error")
-}
+  ## con=.rqda$qdacon
+  dbname <- dbGetInfo(con)$dbname
+  backupname <- sprintf("%s%s.rqda",gsub("rqda$","",dbname,fix=TRUE),format(Sys.time(), "%H%M%S%d%m%Y"))
+  success <- file.copy(from=dbname, to=backupname , overwrite = FALSE)
+  if (success) {
+    gmessage("Succeeded!",con=TRUE,icon="info")
+  } else{
+    gmessage("Fail to back up the project.",con=TRUE,icon="error")
+  }
 }
 
 ProjectMemoWidget <- function(){
